<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uulm.uist.uistinterface.DeviceStoveActivity">

    <TextView
        android:id="@+id/stove_textview_temp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/fridge_temperatur_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/stove_textview_platte4"
        app:layout_constraintRight_toLeftOf="@+id/stove_edittext_platte4" />

    <TextView
        android:id="@+id/stove_textview_temp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/fridge_temperatur_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/stove_textview_platte3"
        app:layout_constraintRight_toLeftOf="@+id/stove_edittext_platte3" />

    <ImageButton
        android:id="@+id/stove_imagebutton_platte4_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp"
        android:layout_marginRight="-13dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte3_2" />

    <ImageButton
        android:id="@+id/stove_imagebutton_platte3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte2_2"
        android:layout_marginRight="-11dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/stove_imagebutton_platte2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte1_2" />

    <TextView
        android:id="@+id/stove_textview_platte4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stove_herd4"
        app:layout_constraintLeft_toRightOf="@+id/stove_imagebutton_platte4"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/stove_imagebutton_platte4"
        android:layout_marginBottom="14dp"
        app:layout_constraintRight_toLeftOf="@+id/stove_textview_temp4"
        android:layout_marginRight="16dp" />

    <ImageButton
        android:id="@+id/stove_imagebutton_platte4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte3" />

    <ImageButton
        android:id="@+id/stove_imagebutton_platte3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte2" />

    <TextView
        android:id="@+id/stove_textview_platte3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stove_herd3"
        app:layout_constraintLeft_toRightOf="@+id/stove_imagebutton_platte3"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/stove_imagebutton_platte3"
        android:layout_marginBottom="14dp"
        app:layout_constraintRight_toLeftOf="@+id/stove_textview_temp3"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/stove_edittext_platte4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toLeftOf="@+id/stove_imagebutton_platte4_2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte3_2" />

    <EditText
        android:id="@+id/stove_edittext_platte3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toLeftOf="@+id/stove_imagebutton_platte3_2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte2_2" />

    <EditText
        android:id="@+id/stove_edittext_platte2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toLeftOf="@+id/stove_imagebutton_platte2_2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte1_2" />

    <TextView
        android:id="@+id/stove_textview_platte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stove_herd2"
        app:layout_constraintLeft_toRightOf="@+id/stove_imagebutton_platte2"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/stove_imagebutton_platte2"
        android:layout_marginBottom="14dp"
        app:layout_constraintRight_toLeftOf="@+id/stove_textview_temp2"
        android:layout_marginRight="16dp" />

    <ImageButton
        android:id="@+id/stove_imagebutton_platte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp"
        android:layout_marginLeft="-14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_imagebutton_platte1" />

    <Switch
        android:id="@+id/stove_switch_onoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:scaleX="2"
        android:scaleY="2"/>

    <ImageButton
        android:id="@+id/stove_imagebutton_platte1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp"
        android:layout_marginLeft="-9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_switch_onoff" />

    <ImageButton
        android:id="@+id/stove_imagebutton_platte1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stove_switch_onoff" />

    <EditText
        android:id="@+id/stove_edittext_platte1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toLeftOf="@+id/stove_imagebutton_platte1_2"
        app:layout_constraintTop_toBottomOf="@+id/stove_switch_onoff" />

    <TextView
        android:id="@+id/stove_textview_temperatur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stove_temperatur"
        app:layout_constraintBaseline_toBaselineOf="@+id/stove_switch_onoff"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/stove_edittext_platte1"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/stove_edittext_platte1" />

    <TextView
        android:id="@+id/stove_textview_platte1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stove_herd1"
        app:layout_constraintLeft_toRightOf="@+id/stove_imagebutton_platte1"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/stove_imagebutton_platte1"
        android:layout_marginBottom="14dp"
        app:layout_constraintRight_toLeftOf="@+id/stove_textview_temp1"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/stove_textview_temp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/fridge_temperatur_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/stove_textview_platte2"
        app:layout_constraintRight_toLeftOf="@+id/stove_edittext_platte2" />

    <TextView
        android:id="@+id/stove_textview_temp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/fridge_temperatur_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/stove_textview_platte1"
        app:layout_constraintRight_toLeftOf="@+id/stove_edittext_platte1" />

</android.support.constraint.ConstraintLayout>
